--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -1,11 +1,50 @@
 body {
   margin: 0;
+  text-align: center;
+  font-family: 'Merriweather', serif;
 }
 
 h1 {
   margin-top: 0;
+  font-family: 'Caveat', cursive;
+  font-size: 40px;
 }
 
-div {
+p {
+  font-family: 'Lato', sans-serif;
+  font-family: 'Martel', serif;
+}
+
+.top-container {
   background-color: #b6eb7a;
+  position: relative;
+  padding-top: 100px;
+}
+
+.middle-container {
+
+
+}
+
+.bottom-container {
+
+}
+
+.bottom-cloud {
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
+}
+
+.top-cloud {
+  position: absolute;
+  right: 300px;
+  top: 50px;
+}
+
+.pic {
+  padding-top: 10px;
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
 }
