--- a/TinDog/css/styles.css
+++ b/TinDog/css/styles.css
@@ -10,7 +10,6 @@
 }
 
 #testimonials {
-  padding: 7% 15%;
   text-align: center;
   background-color:  #ef8172;
   color: white;
@@ -68,13 +67,17 @@ p {
 
 .testimonial-image {
   width: 10%;
-  border-radius: 100%;
+  border-radius: 500%;
   margin: 20px;
 }
 
 .press-logo {
   width: 15%;
   margin: 20px 20px 50px;
+}
+
+.carousel-item {
+  padding: 7% 15%;
 }
 
 /* NAVIGATION BAR */
