--- a/TinDog/css/styles.css
+++ b/TinDog/css/styles.css
@@ -1,13 +1,25 @@
 #title {
   background-color: #ff4c68;
   color: white;
-  height: 100%;
+  height: 47rem;
+}
+
+#cta {
+  background-color: #ff4c68;
+  color: white;
+  font-size: 'Montserrat', sans-serif;
+  height: 20rem;
+  text-align: center;
+  padding: 8% 15%;
+  line-height: 1.5;
 }
 
 #features{
   text-align: center;
   font-size: 250%;
-  padding: 7% 15%;
+  padding: 8% 15%;
+  background-color: white;
+  position: relative;
 }
 
 #testimonials {
@@ -21,6 +33,10 @@
   text-align: center;
   padding-bottom: 3%;
   padding-top: 3%;
+}
+
+#pricing {
+  padding: 100px;
 }
 
 h1{
@@ -49,6 +65,10 @@ p {
   font-size: 1rem;
 }
 
+.footer1{
+  color: black;
+}
+
 .fab1 {
   color: #ef8172;
   margin-bottom: 1rem;
@@ -67,6 +87,10 @@ p {
 
 }
 
+.pricing-column {
+  padding: 3% 2%;
+}
+
 .testimonial-image {
   width: 10%;
   border-radius: 500%;
@@ -82,10 +106,16 @@ p {
   padding: 7% 15%;
 }
 
+.pricing-description {
+  margin-top: 5%;
+  text-align: center;
+}
+
 /* NAVIGATION BAR */
 
 .navbar {
-  padding: 0 0 4.5rem;
+  padding: 1rem 0 4.5rem;
+
 }
 .navbar-brand {
   font-family: "Ubuntu";
@@ -115,4 +145,18 @@ p {
 .title-image{
   width: 60%;
   transform: rotate(25deg);
+  position: absolute;
+  right: 30%;
+}
+
+/* Media Query */
+
+@media (max-width: 1028px) {
+  .title-image {
+    position: static;
+    transform: rotate(0);
+  }
+  #title {
+    text-align: center;
+  }
 }
